--- a/Kilder.html
+++ b/Kilder.html
@@ -2,7 +2,7 @@
 <head>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<link rel="stylesheet" href="webBB.css">
-<title>Home</title>
+<title>Kilder</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -23,10 +23,6 @@
 <div class="content">
   <h2>CSS Template</h2>
   <p>A topnav, content and a footer.</p>
-</div>
-
-<div class="footer">
-  <p>Footer</p>
 </div>
 
 </body>
