--- a/webB.html
+++ b/webB.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="topnav outset">
-  <a href="#home"  class="active fas fa-home">Home</a>
+  <a href="webB.html"  class="active fas fa-home">Home</a>
   <a href="Kilder.html"class="outet">Kilder</a>
   <a href="Internett.html"class="outst">Internett</a>
   <a href="Åndverksloven.html"class="outet">Åndverksloven</a>
