--- a/Escaperoom.html
+++ b/Escaperoom.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="topnav outset">
-  <a href="#home"  class="active fas fa-home">Home</a>
+  <a href="webB.html"  class="active fas fa-home">Home</a>
   <a href="Kilder.html"class="outet">Kilder</a>
   <a href="Internett.html"class="outst">Internett</a>
   <a href="Åndverksloven.html"class="outet">Åndverksloven</a>
@@ -21,8 +21,9 @@
 </div>
 
 <div class="content">
-  <h2>CSS Template</h2>
-  <p>A topnav, content and a footer.</p>
+  <h2>Escaperoom</h2>
+  <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeKEWbtDK64F5fRQG1nfaQOWJ6ASs-PZWK6-emMOWqheX6ohA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Laster inn …</iframe>
+<br>  https://forms.gle/MAf7CqZjjF3D3KFK8</p>
 </div>
 
 </body>
