--- a/webB.html
+++ b/webB.html
@@ -21,12 +21,8 @@
 </div>
 
 <div class="content">
-  <h2>CSS Template</h2>
-  <p>A topnav, content and a footer.</p>
-</div>
-
-<div class="footer">
-  <p>Footer</p>
+  <h2>Home</h2>
+  <p>Dette er en nettside på github.</p>
 </div>
 
 </body>
