--- a/Internett.html
+++ b/Internett.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="topnav outset">
-  <a href="#home"  class="active fas fa-home">Home</a>
+  <a href="webB.html"  class="active fas fa-home">Home</a>
   <a href="Kilder.html"class="outet">Kilder</a>
   <a href="Internett.html"class="outst">Internett</a>
   <a href="Åndverksloven.html"class="outet">Åndverksloven</a>
@@ -21,8 +21,11 @@
 </div>
 
 <div class="content">
-  <h2>CSS Template</h2>
-  <p>A topnav, content and a footer.</p>
+  <h2>Beskrivelse hvordan Internett fungerer</h2>
+  <p>Internett
+  er et verdensomspennende datanettverk og danner grunnlag for en rekke kommunikasjonstjenester. De viktigste er World Wide Web 
+  (før midten av 1990-årene hadde Gopher denne rollen), e-post, chat, filoverføring, IP-telefoni og videosamtale. 
+  <br> <a href=https://no.wikipedia.org/wiki/Internett>Kilde</a> </p>
 </div>
 
 </body>
