--- a/Åndverksloven.html
+++ b/Åndverksloven.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="topnav outset">
-  <a href="#home"  class="active fas fa-home">Home</a>
+  <a href="webB.html"  class="active fas fa-home">Home</a>
   <a href="Kilder.html"class="outet">Kilder</a>
   <a href="Internett.html"class="outst">Internett</a>
   <a href="Åndverksloven.html"class="outet">Åndverksloven</a>
@@ -21,8 +21,10 @@
 </div>
 
 <div class="content">
-  <h2>CSS Template</h2>
-  <p>A topnav, content and a footer.</p>
+  <h2>Åndsverkloven</h2>
+  <p>Forskrift om universell utforming av IKT-løsninger <a href=https://lovdata.no/dokument/SF/forskrift/2013-06-21-732>https://lovdata.no/dokument/SF/forskrift/2013-06-21-732</a>
+ <br>Åndsverkloven <a href=https://lovdata.no/dokument/NL/lov/2018-06-15-40>https://lovdata.no/dokument/NL/lov/2018-06-15-40</a>
+  </p>
 </div>
 
 </body>
