--- a/Filmer.html
+++ b/Filmer.html
@@ -1,4 +1,5 @@
  <!DOCTYPE html>
+<html lang="no">
 <head>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<link rel="stylesheet" href="webBB.css">
@@ -19,7 +20,7 @@
   <a href="Spill.html"class="otset">Spill</a>
   <a href="Filmer.html" class="utset">Filmer</a>
 </div>
-<div class="content">
+<div class="content1">
   <h2>Filmer</h2>
   <p><iframe width="560" height="315" src="https://www.youtube.com/embed/A2198C9oTTQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 </div>
