--- a/webB.html
+++ b/webB.html
@@ -1,4 +1,5 @@
  <!DOCTYPE html>
+<html lang="no">
 <head>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<link rel="stylesheet" href="webBB.css">
@@ -20,9 +21,23 @@
   <a href="Filmer.html" class="utset">Filmer</a>
 </div>
 
-<div class="content">
+<div class="content1">
   <h2>Home</h2>
-  <p>Dette er en nettside på github.</p>
+  <p>Dette er en nettside på github. 
+   <br>&emsp;
+<br><b>&emsp;Lovkravene som jeg kanskje følger (minst 10):</b>
+  <br>&emsp; 1 - 1.4.3 Kontrast (minimum, Nivå AA)
+  <br>&emsp; 2 - 4.1.1 Parsing (oppdeling, Nivå A)
+  <br>&emsp; 3 - 3.3.4 Forhindring av feil (juridiske feil, økonomiske feil, datafeil, Nivå AA)
+  <br>&emsp; 4 - 3.1.1 Språk på siden (Nivå A)
+  <br>&emsp; 5 - 2.4.4 Formål med lenke (i kontekst, Nivå A)
+  <br>&emsp; 6 - 2.4.3 Fokusrekkefølge (Nivå A)
+  <br>&emsp; 7 - 2.4.2 Sidetitler (Nivå A)
+  <br>&emsp; 8 - 1.3.2 Meningsfylt rekkefølge (Nivå A)
+  <br>&emsp; 9 - 2.1.2 Ingen tastaturfelle (Nivå A)
+  <br>&emsp; 10 - 1.3.1 Informasjon og relasjoner (Nivå A)
+  </br>
+  </p> 
 </div>
 
 </body>
