--- a/Escaperoom.html
+++ b/Escaperoom.html
@@ -1,4 +1,5 @@
  <!DOCTYPE html>
+<html lang="no">
 <head>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<link rel="stylesheet" href="webBB.css">
@@ -20,10 +21,10 @@
   <a href="Filmer.html" class="utset">Filmer</a>
 </div>
 
-<div class="content">
+<div class="content1">
   <h2>Escaperoom</h2>
   <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeKEWbtDK64F5fRQG1nfaQOWJ6ASs-PZWK6-emMOWqheX6ohA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Laster inn …</iframe>
-<br>  https://forms.gle/MAf7CqZjjF3D3KFK8</p>
+<br>  <a href=https://forms.gle/MAf7CqZjjF3D3KFK8>https://forms.gle/MAf7CqZjjF3D3KFK8</a> </p>
 </div>
 
 </body>
