--- a/Internett.html
+++ b/Internett.html
@@ -1,4 +1,5 @@
  <!DOCTYPE html>
+<html lang="no">
 <head>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<link rel="stylesheet" href="webBB.css">
@@ -25,7 +26,7 @@
   <p>Internett
   er et verdensomspennende datanettverk og danner grunnlag for en rekke kommunikasjonstjenester. De viktigste er World Wide Web 
   (før midten av 1990-årene hadde Gopher denne rollen), e-post, chat, filoverføring, IP-telefoni og videosamtale. 
-  <br> <a href=https://no.wikipedia.org/wiki/Internett>Kilde</a> </p>
+  <br> <a href=https://no.wikipedia.org/wiki/Internett>https://no.wikipedia.org/wiki/Internett</a> </p>
 </div>
 
 </body>
