--- a/Åndverksloven.html
+++ b/Åndverksloven.html
@@ -1,4 +1,5 @@
  <!DOCTYPE html>
+<html lang="no">
 <head>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<link rel="stylesheet" href="webBB.css">
