--- a/Kilder.html
+++ b/Kilder.html
@@ -22,7 +22,8 @@
 </div>
 <div class="content">
   <h2>Kilder brukt til å lage siden</h2>
-  <p>https://www.w3schools.com/</p>
+  <p>
+  <a href=https://www.w3schools.com>https://www.w3schools.com</a> </p>
 </div>
 
 </body>
