--- a/Kilder.html
+++ b/Kilder.html
@@ -24,6 +24,22 @@
   <h2>Kilder brukt til å lage siden</h2>
   <p>
   <a href=https://www.w3schools.com>https://www.w3schools.com</a> </p>
+
+  <p>
+  <a href=https://www.youtube.com>https://www.youtube.com</a> </p>
+
+  <p>
+  <a href=https://github.com/>https://github.com/</a> </p>
+ 
+  <p>
+  <a href=https://scratch.mit.edu/>https://scratch.mit.edu/</a> </p>
+  
+  <p>
+  <a href=https://obsproject.com/>https://obsproject.com/</a> </p>
+  
+   <p>
+  <a href=https://forms.gle/MAf7CqZjjF3D3KFK8>https://forms.gle/MAf7CqZjjF3D3KFK8</a> </p>
+
 </div>
 
 </body>
