--- a/Escaperoom.html
+++ b/Escaperoom.html
@@ -23,7 +23,7 @@
 
 <div class="content1">
   <h2>Escaperoom</h2>
-  <p><iframe class="content2" src="https://docs.google.com/forms/d/e/1FAIpQLSeKEWbtDK64F5fRQG1nfaQOWJ6ASs-PZWK6-emMOWqheX6ohA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Laster inn …</iframe>
+  <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeKEWbtDK64F5fRQG1nfaQOWJ6ASs-PZWK6-emMOWqheX6ohA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Laster inn …</iframe>
 <br>  <a href=https://forms.gle/MAf7CqZjjF3D3KFK8>https://forms.gle/MAf7CqZjjF3D3KFK8</a> </p>
 </div>
 
