--- a/Spill.html
+++ b/Spill.html
@@ -34,7 +34,7 @@ s<html lang="no">
 <div class="content1">
   <h2>Spill</h2>
   <p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/8NIVTzeu88Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p></p>
+  <iframe src="https://scratch.mit.edu/projects/394913923/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   
 </div>
 
