--- a/Spill.html
+++ b/Spill.html
@@ -1,5 +1,5 @@
  <!DOCTYPE html>
-s<html lang="no">
+<html lang="no">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <style>
